# gait_training_robot

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  global_planner_plugin.xml  package.xml
configuration_files/: cartographer_2d.lua
data/: segments.yaml  waypoints.yaml  waypoints02.yaml  waypoints_ccw.yaml  waypoints_cw.yaml
docs/: DataCollection.md  DataProcessing.md  sunny.md  topics.md
docs/latex/: comkf_model1.tex  comkf_model2.tex
include/comkf/: CopMeasurementModel.hpp  PVMeasurementModel.hpp  PositionMeasurementModel.hpp  SystemModel.hpp  comkf.hpp
include/comkf_optitrack/: CopMeasurementModel.hpp  PositionMeasurementModel.hpp  SystemModel.hpp  comkf.hpp
include/gait_training_robot/: distance_controller.h  fir_filter.h  foot_pose_estimator.h  gait_analyzer.h  gait_analyzer_optitrack.h  global_planner.h  goal_generator.h  kalman_filter.h  kalman_filter_common.h  kinect_pose_estimator.h  robust_estimator.h  skeleton_common.h  sport_sole_kalman_filter.h
include/kalman/: ExtendedKalmanFilter.hpp  UnscentedKalmanFilter.hpp
include/kpekf/: AccelMeasurementModel.hpp  ExtendedKalmanFilter.hpp  GyroMeasurementModel.hpp  PositionMeasurementModel.hpp  QuatMeasurementModel.hpp  SystemModel.hpp  VAMeasurementModel.hpp  VelocityMeasurementModel.hpp  YawMeasurementModel.hpp
include/sport_sole_ekf/: AccelMeasurementModel.hpp  ExtendedKalmanFilter.hpp  GyroMeasurementModel.hpp  PositionMeasurementModel.hpp  QuatMeasurementModel.hpp  SystemModel.hpp  VAMeasurementModel.hpp  VelocityMeasurementModel.hpp  YawMeasurementModel.hpp
launch/: cartographer.launch  cartographer_assets_writer.launch  cartographer_localization.launch  cartographer_offline.launch  ga.launch  gn_record.launch  gn_record_ccw.launch  kinect_ekf.launch  kinect_scan.launch  play.launch  play_both.launch  plot_mos.launch  record_ccw.launch  record_cw.launch  robot.launch  rtabmap_localize.launch  rtabmap_map.launch  rtabmap_playbag.launch  rtabmap_preview.launch  rviz+robot_state_publisher.launch  rviz+urdf_state.launch  sunny_mapping_play.launch  sunny_mapping_record.launch  sunny_play_local.launch  sunny_play_remote.launch  sunny_record.launch  sunny_record_ccw.launch  sunny_record_cw.launch  sync_kinect_and_insole.launch  test.launch  test1_rtabmap_headless.launch  test1_rviz_rtabmap.launch  test1_slam.launch  test1_slam_headless.launch  test1_slam_rviz.launch  test2_plan_headless.launch  test3_gait_analyzer.launch  test4_kalman_filter.launch  test5_comkf.launch  view_ga.launch
launch/includes/: kinect_azure.launch  kinect_rtabmap.launch  playback.launch  robot.launch  robot_state_publisher.launch
map/: eas101_1.yaml
meshes/: readme.md  shoe.stl
msg/: ComkfComMeasurement.msg  ComkfState.msg  HumanSkeletonAzure.msg  HumanSkeletonV2.msg  ImuAzure.msg  KpekfKimuMeasurement.msg  KpekfOdomMeasurement.msg  KpekfState.msg  SportSoleEkfKinectMeasurement.msg  SportSoleEkfSportSoleMeasurement.msg  SportSoleEkfState.msg
optitrack/: convert_optitrack_to_bag.py
params/: distance_controller.yaml  foot_pose_estimator.yaml  gait_analyzer.yaml  gait_analyzer1.yaml  gait_analyzer2.yaml  gait_analyzer3.yaml  gait_analyzer_optitrack1.yaml  gait_analyzer_optitrack2.yaml  gait_analyzer_optitrack3.yaml  kinect_ekf.yaml  kinect_pose_estimator.yaml
params/slam/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  gmapping_params.yaml
rviz/: 2d.rviz  cartographer.rviz  display_urdf.rviz  gait_analyzer.rviz  pelvis_rect.rviz  slam.rviz  slam_azure.rviz  slam_rtabmap.rviz  slam_rtabmap_ekf.rviz  slam_rtabmap_ekf_ga.rviz  slam_rtabmap_playbag.rviz  slam_rtabmap_pressure.rviz  sport_sole_kalman_filter.rviz  sunny_2d.rviz  sunny_3d.rviz
src/: distance_controller.cpp  fir_filter.cpp  foot_pose_estimator.cpp  gait_analyzer.cpp  gait_analyzer_optitrack.cpp  global_planner.cpp  goal_generator.cpp  kalman_filter.cpp  kinect_pose_estimator.cpp  open_loop_controller.py  record_monitor.py  simple_harmonic_controller.py  skeleton_publisher.cpp  sport_sole_kalman_filter.cpp  sync_kinect_and_insole.py  sync_kinect_and_odom.py  teleop_key.py
test/: test_sport_sole_ekf.cpp
urdf/: azure_kinect.urdf.xacro  camera_mount.urdf.xacro  gtr2.urdf.xacro  kinect.urdf.xacro  pioneer3dx.urdf.xacro
utilities/: _modify_bag_tf_th.py  bag_ops.py  batch_process_ga.py  batch_process_odom.py  calc_ga.py  compare_com.py  compare_foot_pose.py  convert_bag_to_mat.py  convert_optitrack_to_bag.py  convert_xlsx_to_csv.bash  copy_bags.py  ga.py  generate_waypoints.py  install_aria.sh  modify_bag_tf.py  modify_bag_tf_base_link.py  modify_bag_tf_map.py  modify_bag_tf_th.py  modify_bag_tf_ts.py  move_csv.bash  move_mat.bash  plot_cv_box.py  plot_cv_value_box.py  rectify_bag_names.bash  sunny_generate_waypoints.py  sunny_generate_waypoints8.py  sunny_play.py  test_freq.py  test_imu.py  update_bag_info.bash  update_validation_table.py  upgrade_old_bag.py  validate_robot_against_csv.py
utilities/plot/: plot_dist_box.py  plot_foot_pitch_angle.py  plot_guo.py  plot_guo_optitrack.py  plot_kinect_sr.py  plot_localization.py  plot_mos.py  plot_sport_sole.py  plot_vel_box.py
